- Added functionality use confirmation of profile after registration
